// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="visible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render as delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="Caio"
                  src="data:image/svg+xml;utf8,data:image/png;base64,avatarImage"
                  title="Caio"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  CA
                </span>
              </div>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Caio
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="id5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(139, 195, 74)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="id5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                id5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
              </span>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="visible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with live networks only 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="AdVSe37niA3uFUPgCgMUH2tMsHF4LpLoiX"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(156, 39, 176)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"45\\" cx=\\"70\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="AdVSe37niA3uFUPgCgMUH2tMsHF4LpLoiX"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                AdVSe37niA3uFUPgCgMUH2tMsHF4LpLoiX
              </span>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="visible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with multiple addresses 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 fXMgbp"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="visible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 fXMgbp"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="invisible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
              </span>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="invisible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with multiple options 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 fXMgbp"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="visible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 fXMgbp"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="invisible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
              </span>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="invisible"
              >
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hdgSCX"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdvvtL qGXhc"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with one option 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 fXMgbp"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="Brian"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                  title="Brian"
                />
                <span
                  class="absolute text-sm font-semibold text-theme-background"
                >
                  BR
                </span>
              </div>
            </div>
            <span
              class="font-semibold"
              data-testid="ContactListItem__name"
            >
              Brian
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="visible"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                  data-testid="ContactListItem__one-option-button-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Option 1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 fXMgbp"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
              </span>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="invisible"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                  data-testid="ContactListItem__one-option-button-1"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Option 1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
          >
            <div
              aria-label="ARK Devnet"
              class="Circle__CircleWrapper-sc-d5u41q-0 ePUgJq text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdvvtL qGXhc"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class=""
          data-testid="ContactListItem__address"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-18vw8a4-0 gljhIf flex-shrink-0"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"50\\" cx=\\"0\\" cy=\\"40\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu"
                />
              </div>
            </div>
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
              </span>
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-4 justify-center"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="text-theme-primary-300 dark:text-theme-secondary-700"
              >
                <div
                  class="sc-bdvvtL fCrhkg"
                  height="16"
                  width="16"
                >
                  <svg>
                    copy.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                data-testid="ContactListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
              <div
                class="invisible"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
                  data-testid="ContactListItem__one-option-button-2"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Option 1
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
